--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
   <body>
-    Hello,world!
+   Hello,world!
 
 	I like apple.
+	<button type="button">click!</button>
   </body>
 </html>
